logs/dag_id=DataMart/run_id=scheduled__2022-12-11T07:00:00+00:00/task_id=ReadData/attempt=2.log
[2022-12-13T07:07:59.524+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: DataMart.ReadData scheduled__2022-12-11T07:00:00+00:00 [queued]>
[2022-12-13T07:07:59.537+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: DataMart.ReadData scheduled__2022-12-11T07:00:00+00:00 [queued]>
[2022-12-13T07:07:59.539+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2022-12-13T07:07:59.539+0000] {taskinstance.py:1284} INFO - Starting attempt 2 of 6
[2022-12-13T07:07:59.540+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2022-12-13T07:07:59.551+0000] {taskinstance.py:1304} INFO - Executing <Task(PythonOperator): ReadData> on 2022-12-11 07:00:00+00:00
[2022-12-13T07:07:59.560+0000] {standard_task_runner.py:55} INFO - Started process 7660 to run task
[2022-12-13T07:07:59.565+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'DataMart', 'ReadData', 'scheduled__2022-12-11T07:00:00+00:00', '--job-id', '330', '--raw', '--subdir', 'DAGS_FOLDER/datamart.py', '--cfg-path', '/tmp/tmp4_rpvii2']
[2022-12-13T07:07:59.572+0000] {standard_task_runner.py:83} INFO - Job 330: Subtask ReadData
[2022-12-13T07:07:59.666+0000] {task_command.py:389} INFO - Running <TaskInstance: DataMart.ReadData scheduled__2022-12-11T07:00:00+00:00 [running]> on host 83e68f36074a
[2022-12-13T07:07:59.744+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gama Ariefsadya
AIRFLOW_CTX_DAG_ID=DataMart
AIRFLOW_CTX_TASK_ID=ReadData
AIRFLOW_CTX_EXECUTION_DATE=2022-12-11T07:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-12-11T07:00:00+00:00
[2022-12-13T07:07:59.780+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/datamart.py", line 26, in ReadData
    cursor.execute(query)
psycopg2.errors.SyntaxError: zero-length delimited identifier at or near """"
LINE 1: select * from ""
                      ^

[2022-12-13T07:07:59.792+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=DataMart, task_id=ReadData, execution_date=20221211T070000, start_date=20221213T070759, end_date=20221213T070759
[2022-12-13T07:07:59.801+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 330 for task ReadData (zero-length delimited identifier at or near """"
LINE 1: select * from ""
                      ^
; 7660)
[2022-12-13T07:07:59.818+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-13T07:07:59.847+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
